# AutoVd-BE

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FUNCTION_SPLIT_PLAN.md  README.md  pyproject.toml  requirements.txt  test_ai.py
app/: main.py
app/ai/: ai_service.py
app/ai/providers/: base.py  stub_provider.py
app/api/: auth.py  dependencies.py  projects.py  video.py
app/api/v1/: router.py
app/api/v1/endpoints/: generation.py  prompts.py
app/core/: celery_app.py  config.py  security.py
app/db/: database.py
app/generation/: generation_service.py
app/models/: models.py
app/prompts/: prompt_registry.py  prompt_renderer.py  prompt_service.py  prompt_types.py
app/prompts/templates/: image_prompt_generate.yaml
app/schemas/: auth.py  response.py
app/services/: asset_generator.py  crawler.py  llm.py  tasks.py  video_editor.py
my-video-ai-backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  test_ai.py
my-video-ai-backend/app/: main.py
my-video-ai-backend/app/api/: auth.py  projects.py  video.py
my-video-ai-backend/app/core/: celery_app.py  config.py  security.py
my-video-ai-backend/app/db/: database.py
my-video-ai-backend/app/models/: models.py
my-video-ai-backend/app/schemas/: auth.py  response.py
my-video-ai-backend/app/services/: asset_generator.py  crawler.py  llm.py  tasks.py  video_editor.py
tests/: test_generation_api.py  test_prompts_api.py
